optimizer/src/snapshots/spec_example_drop_side_effects.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { server$ } from '@qwik.dev/router';
import { clientSupabase } from 'supabase';
import { Client } from 'openai';
import { secret } from './secret';
import { sideEffect } from './secret';

const supabase = clientSupabase();
const dfd = new Client(secret);

(function() {
	console.log('run');
	})();
	(() => {
	console.log('run');
	})();

sideEffect();

export const api = server$(() => {
	supabase.from('ffg').do(dfd);
});

export default component$(() => {
	return (
		<button onClick$={() => await api()}></button>
	)
	});

============================= test.tsx_test_component_button_onClick_DGk9xLyRokA.js (ENTRY POINT)==

import { api } from "./test";
export const test_component_button_onClick_DGk9xLyRokA = ()=>await api();


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_onClick_DGk9xLyRokA",
  "entry": null,
  "displayName": "test.tsx_test_component_button_onClick",
  "hash": "DGk9xLyRokA",
  "canonicalFilename": "test.tsx_test_component_button_onClick_DGk9xLyRokA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_api_server_JonPp043gH0.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const api_server_JonPp043gH0 = ()=>{
	const [dfd, supabase] = useLexicalScope();
	supabase.from("ffg").do(dfd);
};


None
/*
{
  "origin": "test.tsx",
  "name": "api_server_JonPp043gH0",
  "entry": null,
  "displayName": "test.tsx_api_server",
  "hash": "JonPp043gH0",
  "canonicalFilename": "test.tsx_api_server_JonPp043gH0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": true,
  "loc": [
    431,
    471
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_DGk9xLyRokA = ()=>import("./test.tsx_test_component_button_onClick_DGk9xLyRokA");
export const test_component_LUXeXe0DQrg = ()=>{
	return /*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_DGk9xLyRokA, "test_component_button_onClick_DGk9xLyRokA") }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    501,
    573
  ]
}
*/
============================= test.js ==

import { sideEffect } from "./secret";
import { serverQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { secret } from "./secret";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/router";
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { secret } from "./secret";
import { sideEffect } from "./secret";
const i_JonPp043gH0 = ()=>import("./test.tsx_api_server_JonPp043gH0");
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
const supabase = clientSupabase();
const dfd = new Client(secret);
(function() {
	console.log("run");
})();
(()=>{
	console.log("run");
})();
sideEffect();
export const api = /*#__PURE__*/ serverQrl(/*#__PURE__*/ qrl(i_JonPp043gH0, "api_server_JonPp043gH0", [dfd, supabase]));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
