optimizer/src/snapshots/spec_example_functional_component.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore } from '@qwik.dev/core';
const Header = component$(() => {
	const thing = useStore();
	const {foo, bar} = foo();

	return (
		<div>{thing}</div>
	);
});

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT)==

import { useStore } from "@qwik.dev/core";
export const Header_component_J4uyIhaBNR4 = ()=>{
	const thing = useStore();
	const { foo, bar } = foo();
	return <div>{thing}</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    183
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_J4uyIhaBNR4 = ()=>import("./test.tsx_Header_component_J4uyIhaBNR4");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_J4uyIhaBNR4, "Header_component_J4uyIhaBNR4"));


None
== DIAGNOSTICS ==

[]
