optimizer/src/snapshots/spec_example_functional_component_2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore } from '@qwik.dev/core';
export const useCounter = () => {
	return useStore({count: 0});
}

export const STEP = 1;

export const App = component$((props) => {
	const state = useCounter();
	const thing = useStore({thing: 0});
	const STEP_2 = 2;

	const count2 = state.count * 2;
	return (
		<div onClick$={() => state.count+=count2 }>
			<span>{state.count}</span>
			{buttons.map(btn => (
				<button
					onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
				>
					{btn.name}
				</button>
			))}

		</div>

	);
})

============================= test.tsx_App_component_div_on_click_V4v7mvdC0xU.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_on_click_V4v7mvdC0xU = ()=>{
	const [count2, state] = useLexicalScope();
	return state.count += count2;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_on_click_V4v7mvdC0xU",
  "entry": null,
  "displayName": "test.tsx_App_component_div_on_click",
  "hash": "V4v7mvdC0xU",
  "canonicalFilename": "test.tsx_App_component_div_on_click_V4v7mvdC0xU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0.js (ENTRY POINT)==

import { STEP } from "./test";
import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_button_on_click_5a2ivZyN1Y0 = (_, _1, btn)=>{
	const [STEP_2, props, state, thing] = useLexicalScope();
	return state.count += btn.offset + thing + STEP + STEP_2 + props.step;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_on_click_5a2ivZyN1Y0",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_on_click",
  "hash": "5a2ivZyN1Y0",
  "canonicalFilename": "test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useCounter } from "./test";
import { useStore } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_5a2ivZyN1Y0 = ()=>import("./test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0");
const i_V4v7mvdC0xU = ()=>import("./test.tsx_App_component_div_on_click_V4v7mvdC0xU");
export const App_component_ckEPmXZlub0 = (props)=>{
	const state = useCounter();
	const thing = useStore({ thing: 0 });
	const STEP_2 = 2;
	const count2 = state.count * 2;
	const App_component_div_button_on_click_5a2ivZyN1Y0 = /*#__PURE__*/ qrl(i_5a2ivZyN1Y0, "App_component_div_button_on_click_5a2ivZyN1Y0", [
		STEP_2,
		props,
		state,
		thing
	]);
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_V4v7mvdC0xU, "App_component_div_on_click_V4v7mvdC0xU", [count2, state]) }, null, [/*#__PURE__*/ _jsxSorted("span", null, null, state.count, 1, null), buttons.map((btn)=>/*#__PURE__*/ _jsxSorted("button", {
		"on:click": App_component_div_button_on_click_5a2ivZyN1Y0,
		"q:p": btn
	}, null, _wrapProp(btn, "name"), 1, null))], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    179,
    578
  ]
}
*/
============================= test.js ==

import { useStore } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const useCounter = ()=>{
	return useStore({ count: 0 });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
