optimizer/src/snapshots/spec_example_inlined_entry_strategy.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@qwik.dev/core';
import { thing } from './sibling';
import mongodb from 'mongodb';

export const Child = component$(() => {

	useStyles$('somestring');
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		state.count = thing.doStuff() + import("./sibling");
	});

	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= test.tsx ==

import { useStylesQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { thing } from "./sibling";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
import { thing } from "./sibling";
import mongodb from "mongodb";
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ inlinedQrl("somestring", "Child_component_useStyles_qBZTuFM0160"));
	const state = useStore({ count: 0 });
	// Double count watch
	/*#__PURE__*/ useBrowserVisibleTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
		const [state] = useLexicalScope();
		state.count = thing.doStuff() + import("./sibling");
	}, "Child_component_useBrowserVisibleTask_0IGFPOyJmQA", [state]));
	return <div on:click={/*#__PURE__*/ inlinedQrl(()=>console.log(mongodb), "Child_component_div_on_click_MMpkjn7JKOk")}>
		</div>;
}, "Child_component_9GyF01GDKqw"));


None
== DIAGNOSTICS ==

[]
