optimizer/src/snapshots/spec_example_issue_33443.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';

export const Issue3742 = component$(({description = '', other}: any) => {
	const counter = useSignal(0);
	return (
		<div
		title={(description && 'description' in other) ? `Hello ${counter.value}` : `Bye ${counter.value}`}
		>
		Issue3742
		<button onClick$={() => counter.value++}>
			Increment
		</button>
		</div>
	)
	});

============================= test.js ==

import { useSignal } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0, p1)=>description && "description" in p0.other ? `Hello ${counter.value}` : `Bye ${counter.value}`;
const _hf0_str = "description&&`description`in p0.other?`Hello ${counter.value}`:`Bye ${counter.value}`";
export const Issue3742 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((_rawProps)=>{
	const counter = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", { title: _fnSignal(_hf0, [_rawProps, counter], _hf0_str) }, null, ["Issue3742", /*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ inlinedQrl(()=>{
		const [counter] = useLexicalScope();
		return counter.value++;
	}, "Issue3742_component_div_button_onClick_a504K2BCEXg", [counter]) }, null, "Increment", 3, null)], 3, null);
}, "Issue3742_component_svSy0PlWTAw"));


None
== DIAGNOSTICS ==

[]
